--- a/TestMac/Base.lproj/Main.storyboard
+++ b/TestMac/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
-        <plugIn identifier="com.apple.WebKit2IBPlugin" version="18122"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -685,7 +684,7 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="TabWindow" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
+                    <window key="window" title="TabWindow" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" appearanceType="aqua" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
@@ -697,12 +696,14 @@
                                 <toolbarItem implicitItemIdentifier="NSToolbarPrintItem" id="Ulv-Ny-lSm"/>
                                 <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="uKs-V2-muq"/>
                                 <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="WWZ-Ta-8ph"/>
-                                <toolbarItem implicitItemIdentifier="D25C42EE-7628-46F3-81B5-23BFEEA996FA" label="Toolbar Item" paletteLabel="Toolbar Item" tag="-1" bordered="YES" id="Jn7-L1-Ked">
+                                <toolbarItem implicitItemIdentifier="D25C42EE-7628-46F3-81B5-23BFEEA996FA" label="" paletteLabel="" tag="-1" image="NSTouchBarSidebarTemplate" id="Jn7-L1-Ked">
                                     <size key="minSize" width="12" height="25"/>
                                     <size key="maxSize" width="12" height="25"/>
                                 </toolbarItem>
                             </allowedToolbarItems>
-                            <defaultToolbarItems/>
+                            <defaultToolbarItems>
+                                <toolbarItem reference="Jn7-L1-Ked"/>
+                            </defaultToolbarItems>
                         </toolbar>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
@@ -724,28 +725,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="741" height="547"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tzq-O0-bYx">
-                                <rect key="frame" x="0.0" y="0.0" width="741" height="547"/>
-                                <wkWebViewConfiguration key="configuration">
-                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
-                                    <wkPreferences key="preferences"/>
-                                </wkWebViewConfiguration>
-                            </wkWebView>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E1Q-NL-5FP">
+                                <rect key="frame" x="37" y="346" width="75" height="32"/>
+                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="y7R-6F-Sps">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="addtag:" target="XfG-lQ-9wD" id="QtZ-J8-wqW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Tzq-O0-bYx" secondAttribute="trailing" id="5OG-Zt-rj0"/>
-                            <constraint firstItem="Tzq-O0-bYx" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="7Ne-Ao-wxt"/>
-                            <constraint firstAttribute="bottom" secondItem="Tzq-O0-bYx" secondAttribute="bottom" id="Phk-Pv-A3C"/>
-                            <constraint firstItem="Tzq-O0-bYx" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="nDQ-YA-pLz"/>
+                            <constraint firstItem="E1Q-NL-5FP" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="174" id="AtK-Kj-Xzq"/>
+                            <constraint firstItem="E1Q-NL-5FP" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="44" id="y9c-8g-LNo"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="webView" destination="Tzq-O0-bYx" id="5zd-Tf-gqa"/>
-                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="205.5" y="793.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NSTouchBarSidebarTemplate" width="18" height="14"/>
+    </resources>
 </document>
